Linux: Fix `.desktop` file

--- a/packaging/VoiceAssistant.desktop.in
+++ b/packaging/VoiceAssistant.desktop.in
@@ -4,7 +4,7 @@ Type=Application
 Encoding=UTF-8
 Name=VoiceAssistant
 Version=${PROJECT_VERSION}
-Comment=${PROJECT_DESCRIPTION}
+Comment=${PROJECT_DESCRIPTION_SUMMARY}
 Comment[fr]=VoiceAssistant est un assistant vocal personnalisable et économe en ressources qui est encore aux premiers stades de développement mais déjà fonctionnel.
 Comment[es]=VoiceAssistant es un asistente de voz eficiente en recursos y personalizable que aún está en las primeras etapas de desarrollo pero ya es funcional.
 Comment[de]=VoiceAssistant ist ein ressourcenschonender und anpassbarer Sprachassistent, der sich noch in einem frühen Entwicklungsstadium befindet, aber bereits funktionsfähig ist.
