Add `Position` class to get the location of the user or a city by name

--- a/plugins/weather/CMakeLists.txt
+++ b/plugins/weather/CMakeLists.txt
@@ -12,13 +12,21 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 include(Dirs)
 include(Plugins)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Network)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} OPTIONAL_COMPONENTS Positioning)
 
 if (NOT Qt${QT_VERSION_MAJOR}Positioning_FOUND)
     message(WARNING "Qt Positioning not found. The weather plugin will not be build")
     return()
+endif()
+
+if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
+    find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS SvgWidgets)
+    set(SVG Qt${QT_VERSION_MAJOR}::SvgWidgets)
+else()
+    find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Svg)
+    set(SVG Qt${QT_VERSION_MAJOR}::Svg)
 endif()
 
 add_plugin(weatherPlugin CLASS_NAME WeatherPlugin)
@@ -30,10 +38,14 @@ target_sources(weatherPlugin PUBLIC
     weatherdata.h
     weatherplugin.cpp
     weatherplugin.h
+    position.cpp
+    position.h
 )
 target_link_libraries(weatherPlugin PUBLIC
     Qt${QT_VERSION_MAJOR}::Widgets
     Qt${QT_VERSION_MAJOR}::Positioning
+    Qt${QT_VERSION_MAJOR}::Network
+    ${SVG}
 )
 
 add_custom_command(TARGET weatherPlugin POST_BUILD
