--- a/.github/workflows/todo-to-issue.yml
+++ b/.github/workflows/todo-to-issue.yml
@@ -1,6 +1,8 @@
 name: "Run TODO to Issue"
 on:
     push:
+        tags-ignore:
+            - '*'
     workflow_dispatch:
         inputs:
             MANUAL_COMMIT_REF:
