Fix release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,13 +54,17 @@ jobs:
       name: Install Qt on Linux
       run: |
         sudo apt-fast update
-        sudo apt-fast install -y qtbase5-dev qtdeclarative5-dev qttools5-dev qtmultimedia5-dev libqt5texttospeech5-dev libqt5svg5-dev qtpositioning5-dev qt5ct
+        sudo apt-fast install -y ninja-build qtbase5-dev qtdeclarative5-dev qttools5-dev qtmultimedia5-dev libqt5texttospeech5-dev libqt5svg5-dev qtpositioning5-dev qt5ct
+
+    - if: contains( matrix.os, 'windows')
+      name: Installing Ninja on Windows
+      uses: ilammy/msvc-dev-cmd@v1
 
     - name: Build and package
       run: |
         mkdir build
         cd build
-        cmake .. -DCMAKE_BUILD_TYPE=Release -DBUILD_TEST_PLUGIN=OFF -DBUILD_TESTING=OFF
+        cmake .. -DCMAKE_BUILD_TYPE=Release -DBUILD_TEST_PLUGIN=OFF -DBUILD_TESTING=OFF -G "Ninja"
         cmake --build . --config Release --target package
       shell: bash
 
