--- a/speechtotext/vosk-api/CMakeLists.txt
+++ b/speechtotext/vosk-api/CMakeLists.txt
@@ -7,8 +7,7 @@ if (NOT ${Vosk_FOUND})
     return()
 endif()
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
+find_package(Qt6 REQUIRED COMPONENTS Core)
 
 add_plugin(voskPlugin)
 target_sources(voskPlugin PUBLIC ../speechtotextplugin.h voskplugin.cpp voskplugin.h)
