--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ set(PROJECT_SOURCES
     src/main.cpp
     src/mainwindow.cpp          src/mainwindow.h
     src/modeldownloader.cpp     src/modeldownloader.h
+    src/pluginloader.cpp        src/pluginloader.h
     src/recognizer.cpp          src/recognizer.h
     src/settingsdialog.cpp      src/settingsdialog.h
     src/texttospeechsettings.cpp src/texttospeechsettings.h
