--- a/speechtotext/CMakeLists.txt
+++ b/speechtotext/CMakeLists.txt
@@ -3,6 +3,7 @@ include_directories(${PROJECT_SOURCE_DIR}/speechtotext)
 set(TTS_PLUGINS ${TTS_PLUGINS})
 
 add_subdirectory(vosk-api)
+# add_subdirectory(whisper-cpp)
 
 if (NOT TTS_PLUGINS)
     message(WARNING "No speech to text plugin found!")
